--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "i18next": "^23.5.0",
     "next": "13.4.10",
+    "next-i18next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
     "sass": "^1.63.6"
   },
